# minimal-rust-ice-s3

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml  docker-compose.yml.example
src/: duckdb_tpch.rs  main.rs
