[package]
name = "mjr"
version = "0.1.0"
edition = "2021"

[dependencies]
iceberg = { path = "../crates/iceberg", workspace = true }
iceberg-catalog-memory = { path = "../crates/catalog/memory", workspace = true }
iceberg-catalog-sql = { path = "../crates/catalog/sql" }
iceberg-catalog-rest = { path = "../crates/catalog/rest" }
iceberg-datafusion = { path = "../crates/integrations/datafusion" }
datafusion = "45"
tokio = { version = "1.0", features = ["full"] }
dotenv = "0.15"
uuid = { version = "1.7.0", features = ["v4", "v7"] }
parquet = "54.2.0"
arrow = "54.2.0"
anyhow = "1.0"
sqlx = { version = "0.8.1", features = ["sqlite", "runtime-tokio", "any", "migrate"] } 